--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ flake8 = "*"
 pytest = "*"
 coverage = "*"
 nuitka = "*"
-nimporter = "*"
+augustine-text = "*"
 
 [requires]
 python_version = "3.8"
